# CLID

./: .env.example  .gitignore  README.md  VERIFICATION.md  pyproject.toml
config/: models.toml
config/prompts/: classify.md  coder.md  delegate.md  design.md  diagnose.md  judge.md
docs/: architectural_blueprint.md
src/clid/: __init__.py  __main__.py  cli.py  config.py  resource.py  schemas.py
src/clid/coder/: __init__.py  coder.py
src/clid/graph/: __init__.py  checkpoint.py  engine.py  pipeline.py  state.py
src/clid/llm/: __init__.py  client.py  mockgen.py  model_manager.py
src/clid/orchestrator/: __init__.py  orchestrator.py
src/clid/tools/: __init__.py  manifest.py  runners.py  sandbox.py  templater.py  workspace.py
tests/: test_engine.py  test_escalation.py  test_openai_backend.py  test_pipeline.py  test_resource.py  test_tools.py
